--- a/src/css/home.css
+++ b/src/css/home.css
@@ -90,16 +90,15 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
-body {
-   background-color: #333;
-   margin: 0;
-   color: #333;
-   font-weight: 400;
-   font-size: 16px;
-   font-family: Roboto, sans-serif;
-   line-height: 1.618em
-}
+ body {
+     background-color: #333;
+     margin: 0;
+     color: #333;
+     font-weight: 400;
+     font-size: 16px;
+     font-family: Roboto, sans-serif;
+     line-height: 1.618em
+ }
 
 h1,
 h2,
@@ -107,33 +106,33 @@ h3,
 h4,
 h5,
 h6 {
- margin-bottom: .618em;
- line-height: 1.5em
+   margin-bottom: .618em;
+   line-height: 1.5em
 }
 
 h1 {
- font-size: 2.618em
+   font-size: 2.618em
 }
 
 h2 {
- font-size: 1.618em
+   font-size: 1.618em
 }
 
 h3 {
- font-size: 1.5em
+   font-size: 1.5em
 }
 
 h4 {
- font-size: 1em
+   font-size: 1em
 }
 
 h5 {
- font-size: .927em
+   font-size: .927em
 }
 
 h6 {
- text-transform: uppercase;
- font-size: .618em
+   text-transform: uppercase;
+   font-size: .618em
 }
 
 blockquote,
@@ -142,407 +141,499 @@ figcaption,
 ol,
 p,
 ul {
- margin-bottom: 1em;
- font-size: 1em;
- line-height: 1.618em
+   margin-bottom: 1em;
+   font-size: 1em;
+   line-height: 1.618em
 }
 
 ul {
- margin-left: 1.618em;
- list-style-type: disc
+   margin-left: 1.618em;
+   list-style-type: disc
 }
 
 ol {
- margin-left: 1.618em;
- list-style-type: decimal
+   margin-left: 1.618em;
+   list-style-type: decimal
 }
 
 nav ol,
 nav ul {
- margin: 0;
- padding: 0;
- list-style: none
+   margin: 0;
+   padding: 0;
+   list-style: none
+}
+
+nav li a {
+    padding: 0 10px;
 }
 
 a,
 a:visited {
- outline: 0;
- color: #2980b9;
- text-decoration: none
+   outline: 0;
+   color: #2980b9;
+   text-decoration: none
 }
 
 a:hover {
- outline: 0;
- text-decoration: none
+   outline: 0;
+   text-decoration: none
 }
 
 a:active {
- color: #c0392b
+   color: #c0392b
 }
 
 a:active,
 a:focus {
- outline: 0
-}
-
-hr {
- display: block;
- height: 1px;
- border: 0;
- border-top: 1px solid #ccc;
- margin: 1em 0;
- padding: 0
+   outline: 0
 }
 
 blockquote {
- padding: 0 1.5em 0 1em;
- border-left: .25em solid #e9e9e9;
- color: #666;
- font-size: 1em;
- line-height: 1.5
+   padding: 0 1.5em 0 1em;
+   border-left: .25em solid #e9e9e9;
+   color: #666;
+   font-size: 1em;
+   line-height: 1.5
 }
 
 figcaption {
- clear: left;
- padding: .6667em 0;
- color: #999;
- font-size: .75em;
- line-height: 1.3334
+   clear: left;
+   padding: .6667em 0;
+   color: #999;
+   font-size: .75em;
+   line-height: 1.3334
 }
 
 samp {
- padding: .25em;
- background-color: #f9f9f9
+   padding: .25em;
+   background-color: #f9f9f9
 }
 
 kbd {
- margin: 0 .25em;
- padding: .3334em .5em;
- border: 1px solid #e9e9e9;
- border-radius: 4px;
- background-color: #f9f9f9;
- box-shadow: inset 0 1px 0 #fff;
- color: #666;
- font-size: 87.5%;
- font-family: inherit;
- line-height: 90%
+   margin: 0 .25em;
+   padding: .3334em .5em;
+   border: 1px solid #e9e9e9;
+   border-radius: 4px;
+   background-color: #f9f9f9;
+   box-shadow: inset 0 1px 0 #fff;
+   color: #666;
+   font-size: 87.5%;
+   font-family: inherit;
+   line-height: 90%
 }
 
 fieldset {
- border: 0;
- margin: 0;
- padding: 0
+   border: 0;
+   margin: 0;
+   padding: 0
 }
 
 textarea {
- resize: vertical
+   resize: vertical
 }
 
 .hidden {
- display: none!important;
- visibility: hidden
+   display: none!important;
+   visibility: hidden
 }
 
 .clearfix:after,
 .clearfix:before {
- content: " ";
- display: table
+   content: " ";
+   display: table
 }
 
 .clearfix:after {
- clear: both
+   clear: both
 }
 
 *,
 :after,
 :before {
- -moz-box-sizing: border-box;
- box-sizing: border-box
+   -moz-box-sizing: border-box;
+   box-sizing: border-box
 }
 
 .row {
- width: 100%
+   width: 100%
 }
 
 .row:after,
 .row:before {
- content: " ";
- display: table
+   content: " ";
+   display: table
 }
 
 .row:after {
- clear: both
+   clear: both
 }
 
 .col-1-2 {
- float: left;
- width: 49%;
- margin-right: 2%
+   float: left;
+   width: 50%;
+   margin-right: 2%
 }
 
 .col-1-2:last-of-type {
- margin-right: 0
+   margin-right: 0
 }
 
 .col-1-3 {
- float: left;
- width: 32%;
- margin-right: 2%
+   float: left;
+   width: 32%;
+   margin-right: 2%
 }
 
 .col-1-3:last-of-type {
- margin-right: 0
+   margin-right: 0
 }
 
 .col-1-4 {
- float: left;
- width: 23.5%;
- margin-right: 2%
+   float: left;
+   width: 23.5%;
+   margin-right: 2%
 }
 
 .col-1-4:last-of-type {
- margin-right: 0
+   margin-right: 0
 }
 
 .col-1-6 {
- float: left;
- width: 15%;
- margin-right: 2%
+   float: left;
+   width: 15%;
+   margin-right: 2%
 }
 
 .col-1-6:last-of-type {
- margin-right: 0
+   margin-right: 0
 }
 
 .col-1-12 {
- float: left;
- width: 6.5%;
- margin-right: 2%
+   float: left;
+   width: 6.5%;
+   margin-right: 2%
 }
 
 .col-1-12:last-of-type {
- margin-right: 0
+   margin-right: 0
 }
 
 body {
- letter-spacing: 1px
+   letter-spacing: 1px
 }
 
 #main {
- max-width: 100%
+   max-width: 100%
+}
+
+#content {
+   border: 1px solid;
+}
+
+#search,
+#submit {
+    float: left;
+}
+
+#search {
+    padding: 10px;
+    height: 35px;
+    width: 238px;
+    border: 0px;
+    font: normal 13px 'trebuchet MS', arial, helvetica;
+    background: #1B3045;
+    border-radius: 50px 3px 3px 50px;
+    color: #CCCCCC;
+    margin: 20px auto 50px;
+    overflow: hidden; /* Clear floats */
+}
+
+/* ----------------------- */
+
+#submit
+{
+    background-color: #00D9D9;
+    background-image: linear-gradient(#00D9D9, #00FFFF);
+    border-radius: 3px 50px 50px 3px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #00B3B3;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.3),
+                0 1px 0 rgba(255, 255, 255, 0.3) inset;
+    height: 35px;
+    margin: 20px 0px 0px 10px;
+    padding: 0;
+    width: 45px;
+    cursor: pointer;
+    font: bold 14px Arial, Helvetica;
+    color: #23441e;
+    text-shadow: 0 1px 0 rgba(255,255,255,0.5);
+}
+
+#submit:hover {
+    background-color: #00B3B3;
+    background-image: linear-gradient(#00FFFF, #00B3B3);
+}
+
+#submit:active {
+    background: #00D9D9;
+    outline: none;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.5) inset;
+}
+
+#submit::-moz-focus-inner {
+    border: 0;  /* Small centering fix for Firefox */
+}
+
+.search_components {
+    margin-top: 20px;
+    margin-right: 30px;
+    float: right;
+    position: relative;
 }
 
 .container {
- margin: 0 auto;
- max-width: 67em;
- padding: 0 1em
+   margin: 0 auto;
+   max-width: 67em;
+   padding: 0 1em
 }
 
 pre code {
- letter-spacing: 0
+   letter-spacing: 0
 }
 
 .headline {
- text-align: center;
- margin-top: 0
+   text-align: center;
+   margin-top: 0
 }
 
 section {
- padding: 4em 0
+   padding: 4em 0
 }
 
 .grid-example .row,
 .window-gui .row {
- margin-bottom: .618em
+   margin-bottom: .618em
 }
 
 .col-8 {
- float: left;
- width: 66%;
- margin-right: 2%
+   float: left;
+   width: 66%;
+   margin-right: 2%
 }
 
 .col-8:last-of-type {
- margin-right: 0
+   margin-right: 0
 }
 
 .col-4 {
- float: left;
- width: 32%;
- margin-right: 2%
+   float: left;
+   width: 32%;
+   margin-right: 2%
 }
 
 .col-4:last-of-type {
- margin-right: 0
+   margin-right: 0
 }
 
 .four {
- float: left;
- width: 32%;
- margin-right: 2%
+   float: left;
+   width: 32%;
+   margin-right: 2%
 }
 
 .four:last-of-type {
- margin-right: 0
+   margin-right: 0
 }
 
 .six {
- float: left;
- width: 49%;
- margin-right: 2%
+   float: left;
+   width: 49%;
+   margin-right: 2%
 }
 
 .six:last-of-type {
- margin-right: 0
+   margin-right: 0
 }
 
 .grid-example [class*=col-] {
- background: #ccc;
- border-radius: 2px
+   background: #ccc;
+   border-radius: 2px
 }
 
 .logo-container {
- text-align: center
+   text-align: left
 }
 
 .site-title {
- margin: 0
+   margin: 0
 }
 
 .hero-shot {
- letter-spacing: 2px;
- position: relative;
- z-index: 1;
- overflow: hidden;
- width: 100%;
- display: table;
- padding: 8em 0 0;
- background: #34495e;
- color: #fff
+   letter-spacing: 2px;
+   position: relative;
+   z-index: 1;
+   overflow: hidden;
+   width: 100%;
+   display: table;
+   padding: 0 0 0;
+   background: #34495e;
+   color: #fff
 }
 
 .hero-shot:after,
 .hero-shot:before {
- content: " ";
- display: table
+   content: " ";
+   display: table
 }
 
 .hero-shot:after {
- clear: both
+   clear: both
 }
 
 .hero-shot a {
- color: #0E2338
+   color: #0E2338
 }
 
 .hero-shot a:hover {
- text-decoration: underline
+   text-decoration: underline
 }
 
 .button-cta {
- display: table;
- margin: 0 auto;
- border: 2px solid #1B3045;
- padding: .618em 2em;
- border-radius: 6px;
- background: #1B3045;
- color: #fff!important
+   display: table;
+   margin: 0 auto;
+   border: 2px solid #1B3045;
+   padding: .618em 2em;
+   border-radius: 6px;
+   background: #1B3045;
+   color: #fff!important
+}
+
+.button-dash {
+   display: inline-table;
+   margin: 0 auto;
+   padding: .618em 2em;
+   border-radius: 12px;
+   background: #D3D7D8;
+   color: #fff!important
+   font-size: 0px;
+   padding: 80px 60px;
+   text-align: center;
+   margin-left: 48px;
+   /*min-width: 5;*/
+
+}
+
+.button-dash:hover {
+   background: #868A8B;
+   text-decoration: none!important;
+   color: #7b190f!important
+}
+
+a.navigation-link {
+  padding: 0px 10px;
+  word-wrap: normal;
+  display: inline-block;
+}
+
+span.navigationSpace {
+    padding-left: 50px;
 }
 
 .button-cta:hover {
- background: 0 0;
- text-decoration: none!important;
- color: #7b190f!important
+   background: 0 0;
+   text-decoration: none!important;
+   color: #7b190f!important
 }
 
 .window-gui {
- background: #fff;
- padding: .618em;
- border-top: 1em solid #999;
- border-radius: 6px 6px 0 0;
- box-shadow: 1em 1em 0 #273C51
+   background: #fff;
+   padding: .618em;
+   border-top: 1em solid #999;
+   border-radius: 6px 6px 0 0;
+   box-shadow: 1em 1em 0 #273C51
 }
 
 .window-gui [class*=col-] {
- border: 1px solid #eee;
- padding: 2%
+   border: 1px solid #eee;
+   padding: 2%
 }
 
 .window-gui [class*=col-] .col-child {
- background: #fff
+   background: #fff
 }
 
 .window-gui [class*=col-] p {
- margin: 0
+   margin: 0
 }
 
 .window-gui pre {
- color: #777;
- margin: .618em 0;
- font-size: .618em;
- text-align: center
+   color: #777;
+   margin: .618em 0;
+   font-size: .618em;
+   text-align: center
 }
 
 .grid-example {
- background: #fff
+   background: #fff
 }
 
 .grid-example pre {
- color: #fff
+   color: #fff
 }
 
 .grid-example .grid {
- padding: 1em;
- border: 1px solid #eee;
- border-radius: 6px;
- box-shadow: 1em 1em 0 #ebebeb
+   padding: 1em;
+   border: 1px solid #eee;
+   border-radius: 6px;
+   box-shadow: 1em 1em 0 #ebebeb
 }
 
 .info {
- background: #ecf0f1;
- color: #555;
- position: relative;
- z-index: 2
+   background: #ecf0f1;
+   color: #555;
+   position: relative;
+   z-index: 2
 }
 
 .info p code {
- font-weight: 700;
- color: #333;
- letter-spacing: 0
+   font-weight: 700;
+   color: #333;
+   letter-spacing: 0
 }
 
 .info pre code {
- border-radius: 6px;
- box-shadow: .618em .618em 0 #e6ebed
+   border-radius: 6px;
+   box-shadow: .618em .618em 0 #e6ebed
 }
 
 .pre {
- background: #fff
+   background: #fff
 }
 
 footer {
- padding: 1em 0;
- background: #333;
- color: #fff;
- text-align: center
+   padding: 1em 0;
+   background: #333;
+   color: #fff;
+   text-align: center
 }
 
 @media handheld,
 only screen and (max-width:768px) {
- .row {
-     margin-right: 0;
-     margin-left: 0;
-     width: 100%
- }
- [class*=col-] {
-     float: none;
-     margin-right: 0;
-     margin-left: 0;
-     margin-bottom: 1em;
-     padding-right: 1em;
-     padding-left: 1em;
-     width: auto
- }
+   .row {
+       margin-right: 0;
+       margin-left: 0;
+       width: 100%
+   }
+   [class*=col-] {
+       float: none;
+       margin-right: 0;
+       margin-left: 0;
+       margin-bottom: 1em;
+       padding-right: 1em;
+       padding-left: 1em;
+       width: auto
+   }
 }
 
 /* ==========================================================================
