--- a/src/css/home.css
+++ b/src/css/home.css
@@ -119,7 +119,7 @@ h2 {
 }
 
 h3 {
-   font-size: 1.5em
+   font-size: 1.3em
 }
 
 h4 {
@@ -154,6 +154,10 @@ ul {
 ol {
    margin-left: 1.618em;
    list-style-type: decimal
+}
+
+th{
+    text-align: left;
 }
 
 nav ol,
@@ -434,6 +438,21 @@ body {
    padding: 0 1em
 }
 
+.clower {
+  overflow: auto;
+}
+
+.clleft{
+  width: 65% ;
+  float: left;
+}
+
+.clright{
+  width : 35%;
+  float: right;
+
+}
+
 /* The side navigation menu */
 .sidenav {
     height: 100%; /* 100% Full-height */
@@ -592,15 +611,17 @@ section {
 
 .button-dash {
    display: inline-table;
+   width: 24.5%;
    margin: 0 auto;
    padding: .618em 2em;
    border-radius: 12px;
    background: #D3D7D8;
    color: #fff!important
    font-size: 0px;
-   padding: 80px 60px;
+   padding: 10% 0%;
    text-align: center;
-   margin-left: 48px;
+   margin-bottom: .5%;
+   /*margin-left: 48px;*/
    /*min-width: 5;*/
 
 }
