--- a/src/css/home.css
+++ b/src/css/home.css
@@ -591,18 +591,20 @@ section {
 }
 
 .button-dash {
-   display: inline-table;
-   margin: 0 auto;
+   display: inline-block;
    padding: .618em 2em;
    border-radius: 12px;
    background: #D3D7D8;
    color: #fff!important
-   font-size: 0px;
    padding: 80px 60px;
    text-align: center;
    margin-left: 48px;
-   /*min-width: 5;*/
-
+   margin: 0 auto;
+   border-radius: 12px;
+   width: 20%;
+   min-width: 200px;
+   padding: 50px 0;
+   height: 100%;
 }
 
 .button-dash:hover {
