--- a/views/home.html
+++ b/views/home.html
@@ -70,34 +70,91 @@
           </div> <!-- row -->
         </div> <!-- container -->
 
-		<!-- Modals -->
+		<!-- Modal -->
 		<div id="modalTemp" class="modal">
-		  <!-- Modal content -->
+		  <!-- Content -->
 		  <div class="modal-content">
-			<span class="close">&times;</span>
-			<p>Temp modal</p>
+        <div class="modal-header">
+          <span class="close">&times;</span>
+    			<p>Live Data</p>
+        </div>
+
+        <div class="row modal-body">
+          <div class="column">
+            <p>Temp Graph</p>
+          </div>
+          <div class="column">
+            <p>Temperature Sensor Feed</p>
+          </div>
+        </div>
+
+        <div class="modal-footer">
+          <p>Footer</p>
+        </div>
 		  </div>
 		</div>
 		<div id="modalSolar" class="modal">
-		  <!-- Modal content -->
-		  <div class="modal-content">
-			<span class="close">&times;</span>
-			<p>Solar modal</p>
-		  </div>
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="close">&times;</span>
+          <p>Live Data</p>
+        </div>
+
+        <div class="row modal-body">
+          <div class="column">
+            <p>Solar Graph</p>
+          </div>
+          <div class="column">
+            <p>Solar Exposure Sensor Feed</p>
+          </div>
+        </div>
+
+        <div class="modal-footer">
+          <p>Footer</p>
+        </div>
+      </div>
 		</div>
 		<div id="modalRain" class="modal">
-		  <!-- Modal content -->
-		  <div class="modal-content">
-			<span class="close">&times;</span>
-			<p>Rain modal</p>
-		  </div>
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="close">&times;</span>
+          <p>Live Data</p>
+        </div>
+
+        <div class="row modal-body">
+          <div class="column">
+            <p>Rain Graph</p>
+          </div>
+          <div class="column">
+            <p>Rain Sensor Feed</p>
+          </div>
+        </div>
+
+        <div class="modal-footer">
+          <p>Footer</p>
+        </div>
+      </div>
 		</div>
 		<div id="modalWind" class="modal">
-		  <!-- Modal content -->
-		  <div class="modal-content">
-			<span class="close">&times;</span>
-			<p>Wind modal</p>
-		  </div>
+      <div class="modal-content">
+        <div class="modal-header">
+          <span class="close">&times;</span>
+          <p>Live Data</p>
+        </div>
+
+        <div class="row modal-body">
+          <div class="column">
+            <p>Wind Graph</p>
+          </div>
+          <div class="column">
+            <p>Wind Sensor Feed</p>
+          </div>
+        </div>
+
+        <div class="modal-footer">
+          <p>Footer</p>
+        </div>
+      </div>
 		</div>
 
         <div class="container">
