--- a/views/index.html
+++ b/views/index.html
@@ -33,7 +33,7 @@
                             <p class="description">A <i>Weather Prediction System</i> that provides data analytics for all your concert needs</p>
 
                             <a class="button-cta" title="Login" href="login.html">Login</a>
-                            <a href="home.html" title="More information"><small>More info</small></a>
+                            <a style="color: #CCCCCC; text-decoration: none!important;" href="home.html" title="More information"><small>More info</small></a>
                         </div>
                     </div> <!-- logo -->
 
