--- a/views/management.html
+++ b/views/management.html
@@ -51,7 +51,7 @@
           <div class="sidenav-content" style="text-align: center;">
             <a href="#">Profiles</a>
             <a href="management.html" onclick="toggleNav(this)">Database</a>
-            <a href="#" onclick="toggleNav(this)">Settings</a>
+            <a href="#">Settings</a>
             <a href="index.html" onclick="toggleNav(this)">Logout</a>
           </div>
         </div>
