--- a/views/home.html
+++ b/views/home.html
@@ -1,107 +1,127 @@
 <!doctype html>
 <html class="no-js" lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
-    <!-- Place favicon.ico in the root directory -->
-    <!-- <link rel="stylesheet" href="css/normalize.css"> -->
-    <link rel="stylesheet" href="../public/css/home.css">
-  </head>
-  <body>
-    <main id="main" role="main">
-      <section class="hero-shot">
-        <div class="container">
-            <!-- Use any element to open the sidenav -->
-            <span id="myBtn" class="nav-link" onclick="toggleNav(this)">
-              <div class="bar1"></div>
-              <div class="bar2"></div>
-              <div class="bar3"></div>
-              <!-- <div class="nav-link">
-                ☰
-              </div> -->
-            </span>
-          <div class="logo-container col-1-2">
-            <div style="float: left;"class="logo">
-              <div style="padding-left: 50px;">
-              </br><a style="color: white"class="site-title" href="home.html">RT Weather</a></br>
-                <a class="top-menu" href="home.html" style="color:#eff4ff">Home</a>
-                <a class="top-menu" href="contact.html" style="color:#eff4ff">Contact</a>
-                <a class="top-menu" href="about.html" style="color:#eff4ff">About Us</a>
-              </div>
-            </div>
-          </div> <!-- logo -->
-        </div> <!-- .container -->
-        <!-- <form class="search_components" action="">
-          <input id="search" type="text" placeholder="Concert Name ...">
-          <input id="submit" type="submit" value=&#9906>
-        </form> -->
-      </section> <!-- .hero-shot -->
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
+  <!-- <link rel="stylesheet" href="css/normalize.css"> -->
+  <link rel="stylesheet" href="../public/css/home.css">
 
-      <section class="info">
-        <div id="Sidenav" class="sidenav">
-          <div class="sidenav-content" style="text-align: center;">
-            <a href="#">Profiles</a>
-            <a href="management.html" onclick="toggleNav(this)">Database</a>
-            <a href="#">Settings</a>
-            <a href="index.html" onclick="toggleNav(this)">Logout</a>
+
+  <script src="../vendor/jquery.min.js"></script>
+
+  <script language="javascript" type="text/javascript" src="../vendor/jquery.js"></script>
+  <script language="javascript" type="text/javascript" src="../vendor/jquery.flot.js"></script>
+
+
+</head>
+<body>
+  <main id="main" role="main">
+    <section class="hero-shot">
+      <div class="container">
+        <!-- Use any element to open the sidenav -->
+        <span id="myBtn" class="nav-link" onclick="toggleNav(this)">
+          <div class="bar1"></div>
+          <div class="bar2"></div>
+          <div class="bar3"></div>
+          <!-- <div class="nav-link">
+          ☰
+        </div> -->
+      </span>
+      <div class="logo-container">
+        <div style="float: left;"class="logo">
+          <div style="padding-left: 50px;">
+          </br><a style="color: white"class="site-title" href="home.html">RT Weather</a></br>
+          <a class="top-menu" href="home.html" style="color:#eff4ff">Home</a>
+          <a class="top-menu" href="contact.html" style="color:#eff4ff">Contact</a>
+          <a class="top-menu" href="about.html" style="color:#eff4ff">About Us</a>
+        </div>
+      </div>
+    </div> <!-- logo -->
+  </div> <!-- .container -->
+  <!-- <form class="search_components" action="">
+  <input id="search" type="text" placeholder="Concert Name ...">
+  <input id="submit" type="submit" value=&#9906>
+</form> -->
+</section> <!-- .hero-shot -->
+
+<section class="info">
+  <div id="Sidenav" class="sidenav">
+    <div class="sidenav-content" style="text-align: center;">
+      <a href="#">Profiles</a>
+      <a href="management.html" onclick="toggleNav(this)">Database</a>
+      <a href="#">Settings</a>
+      <a href="index.html" onclick="toggleNav(this)">Logout</a>
+    </div>
+  </div>
+  <div id="data" class="container">
+    <h2 class="headline">Weather Predictions <span id="loc"></span></h2>
+    <!-- <p style="padding:10px"> </p> -->
+    <div style="height: 250px">
+      <div style="height: 250px">	<!-- Trigger/Open The Modal -->
+        <a class="button-dash" id="btnTemp"><b>Temperature</b><span id="weather"></span></a>
+        <a class="button-dash" id="btnSolar"><b>Solar Exposure</b><span id="vis"></span></a>
+        <a class="button-dash" id="btnRain"><b>Chance of Rain</b><span id="rain"></span></a>
+        <a class="button-dash" id="btnWind"><b>Wind</b><span id="wind"></span></a>
+      </div>
+    </div> <!-- row -->
+  </div> <!-- container -->
+
+  <!-- Modal -->
+  <div id="modalTemp" class="modal">
+    <!-- Content -->
+    <div class="modal-content">
+      <div class="modal-header">
+        <span class="close">&times;</span>
+        <p>Live Data</p>
+      </div>
+
+      <div class="row modal-body">
+        <div class="column">
+          <p><center>Temp Graph</center></p>
+
+          <script>
+          jQuery(document).ready(function(){
+            modal1;
+            modal2;
+            modal3;
+            modal4;
+          })
+          </script>
+          <div id="graphTemp" style="width:450px; height:300px; margin: 20px;">
           </div>
-        </div>
-        <div id="data" class="container">
-          <h2 class="headline">Weather Predictions <span id="loc"></span></h2>
-          <!-- <p style="padding:10px"> </p> -->
-          <div>
-            <div>	<!-- Trigger/Open The Modal -->
-              <a class="button-dash" id="btnTemp">Temperature<span id="weather"></span></a>
-              <a class="button-dash" id="btnSolar">Solar Exposure<span id="vis"></span></a>
-              <a class="button-dash" id="btnRain">Chance of Rain<span id="rain"></span></a>
-              <a class="button-dash" id="btnWind">Wind<span id="wind"></span></a>
-            </div>
-          </div> <!-- row -->
-        </div> <!-- container -->
 
-		<!-- Modal -->
-		<div id="modalTemp" class="modal">
-		  <!-- Content -->
-		  <div class="modal-content">
-        <div class="modal-header">
-          <span class="close">&times;</span>
-    			<p>Live Data</p>
         </div>
+        <div class="column">
+          <p>Temperature Sensor Feed</p>
+        </div>
+      </div>
 
-        <div class="row modal-body">
-          <div class="column">
-            <p>Temp Graph</p>
-          </div>
-          <div class="column">
-            <p>Temperature Sensor Feed</p>
-          </div>
-        </div>
+      <div class="modal-footer">
+        <p>Footer</p>
+      </div>
+    </div>
+  </div>
+  <div id="modalSolar" class="modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <span class="close">&times;</span>
+        <p>Live Data</p>
+      </div>
 
-        <div class="modal-footer">
-          <p>Footer</p>
-        </div>
-		  </div>
-		</div>
-		<div id="modalSolar" class="modal">
-      <div class="modal-content">
-        <div class="modal-header">
-          <span class="close">&times;</span>
-          <p>Live Data</p>
-        </div>
-
-        <div class="row modal-body">
-          <div class="column">
-            <p>Solar Graph</p>
-          </div>
+      <div class="row modal-body">
+        <div class="column">
+          <p>Solar Graph</p>
+          <div id="graphTemp" style="width:450px; height:300px; margin: 20px;"></div>
           <div class="column">
             <p>Solar Exposure Sensor Feed</p>
           </div>
@@ -111,8 +131,8 @@
           <p>Footer</p>
         </div>
       </div>
-		</div>
-		<div id="modalRain" class="modal">
+    </div>
+    <div id="modalRain" class="modal">
       <div class="modal-content">
         <div class="modal-header">
           <span class="close">&times;</span>
@@ -122,110 +142,116 @@
         <div class="row modal-body">
           <div class="column">
             <p>Rain Graph</p>
-          </div>
-          <div class="column">
-            <p>Rain Sensor Feed</p>
-          </div>
-        </div>
-
-        <div class="modal-footer">
-          <p>Footer</p>
-        </div>
-      </div>
-		</div>
-		<div id="modalWind" class="modal">
-      <div class="modal-content">
-        <div class="modal-header">
-          <span class="close">&times;</span>
-          <p>Live Data</p>
-        </div>
-
-        <div class="row modal-body">
-          <div class="column">
-            <p>Wind Graph</p>
-          </div>
-          <div class="column">
-            <p>Wind Sensor Feed</p>
-          </div>
-        </div>
-
-        <div class="modal-footer">
-          <p>Footer</p>
-        </div>
-      </div>
-		</div>
-
-        <div class="container">
-          <div id="lower-container" class="clower">
-<!--             <div id="lower-advice" class="container clleft">
-              <h3>Our Advice*</h3>
-              <p> ‣	Advice based on temperature </P>
-              <p> ‣	Advice based on Solar exposure</p>
-              <p> ‣	Advice based on Rain</p>
-              <p> ‣	Advice based on Wind </p>
-              <p> ‣	Advice based other sources </p>
-              <p><i>* this advice is genrated based pre-assigned evaluations of venue sensor data and weather.com data. </i> </p>
-            </div> -->
-
-            <div id="lower-info" class="container clright">
-              <center> <h3 >Event Info</h3> </center>
-                <table class="display" style="width:100%">
-                  <tr>
-                    <th>Venue:</th>
-                    <td>Olympic Park</td>
-                  </tr>
-                  <tr>
-                    <th>Coordinator:</th>
-                    <td>Josh Hadnagy</td>
-                  </tr>
-                  <tr>
-                    <th>Expected Audience:</th>
-                    <td>72</td>
-                  </tr>
-                  <tr>
-                    <th>Date</th>
-                    <td>16-09-2017</td>
-                  </tr>
-                  <tr>
-                    <th>Time</th>
-                    <td>14:00</td>
-                  </tr>
-                </table>
+            <div id="graphTemp" style="width:450px; height:300px; margin: 20px;"></div>
+            <div class="column">
+              <p>Rain Sensor Feed</p>
             </div>
           </div>
+
+          <div class="modal-footer">
+            <p>Footer</p>
+          </div>
         </div>
-      </section> <!-- info -->
+      </div>
+      <div id="modalWind" class="modal">
+        <div class="modal-content">
+          <div class="modal-header">
+            <span class="close">&times;</span>
+            <p>Live Data</p>
+          </div>
 
-      <footer>
-        <div class="container">
-          <div class="row">
-            <a class="tweetbutton" href="#">Follow @Twitter</a>
-            &nbsp;
-            <a href="#">About</a>
-            &nbsp;
-            <a href="#">Terms</a>
-            &nbsp;
-            <a href="#">Privacy Policy</a>
-            &nbsp;
-            <a href="#">Language</a>
-            <p style="font-size: 13px">48033 IoT WPW System - 2017</p>
-          </div> <!-- row -->
-        </div> <!-- container -->
-      </footer>
-    </main>
+          <div class="row modal-body">
+            <div class="column">
+              <p>Wind Graph</p>
+              <div id="graphWind" style="width:450px; height:300px; margin: 20px;"></div>
+            </div>
+            <div class="column">
+              <p>Wind Sensor Feed</p>
+            </div>
+          </div>
 
-    <script src="../vendor/modernizr.min.js"></script>
-    <script src="../vendor/jquery.min.js"></script>
-    <script src="../public/js/plugins.js"></script>
-    <script src="../public/js/home.js"></script>
-  	<script src="../public/js/modal.js"></script>
-    <script src="../vendor/jquery.simpleWeather.min.js"></script>
+          <div class="modal-footer">
+            <p>Footer</p>
+          </div>
+        </div>
+      </div>
 
-    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-    <script>
-      window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
-      ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
-    </script>
-    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
-  </body>
+      <div class="container">
+        <div id="lower-container" class="clower">
+          <!--             <div id="lower-advice" class="container clleft">
+          <h3>Our Advice*</h3>
+          <p> ‣	Advice based on temperature </P>
+          <p> ‣	Advice based on Solar exposure</p>
+          <p> ‣	Advice based on Rain</p>
+          <p> ‣	Advice based on Wind </p>
+          <p> ‣	Advice based other sources </p>
+          <p><i>* this advice is genrated based pre-assigned evaluations of venue sensor data and weather.com data. </i> </p>
+        </div> -->
+
+        <div id="lower-info" class="container clright">
+          <center> <h3 >Event Info</h3> </center>
+          <table class="display" style="width:100%">
+            <tr>
+              <th>Venue:</th>
+              <td>Olympic Park</td>
+            </tr>
+            <tr>
+              <th>Coordinator:</th>
+              <td>Josh Hadnagy</td>
+            </tr>
+            <tr>
+              <th>Expected Audience:</th>
+              <td>72</td>
+            </tr>
+            <tr>
+              <th>Date</th>
+              <td>16-09-2017</td>
+            </tr>
+            <tr>
+              <th>Time</th>
+              <td>14:00</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+  </section> <!-- info -->
+
+  <footer>
+    <div class="container">
+      <div class="row">
+        <a class="tweetbutton" href="#">Follow @Twitter</a>
+        &nbsp;
+        <a href="#">About</a>
+        &nbsp;
+        <a href="#">Terms</a>
+        &nbsp;
+        <a href="#">Privacy Policy</a>
+        &nbsp;
+        <a href="#">Language</a>
+        <p style="font-size: 13px">48033 IoT WPW System - 2017</p>
+      </div> <!-- row -->
+    </div> <!-- container -->
+  </footer>
+</main>
+<script src="../vendor/modernizr.min.js"></script>
+<script src="../public/js/plugins.js"></script>
+<script src="../public/js/home.js"></script>
+<script src="../public/js/modal.js"></script>
+<script src="../vendor/jquery.simpleWeather.min.js"></script>
+<script>
+jQuery(document).ready(function(){
+  modal1;
+  modal2;
+  modal3;
+  modal4;
+})
+</script>
+<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+<script>
+window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
+ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
+</script>
+<script src="https://www.google-analytics.com/analytics.js" async defer></script>
+</body>
 </html>
