Implemented graph and sensor toggle backend.

--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="../public/css/main.css">
+        <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -32,7 +32,7 @@
                             <h1 class="site-title">RT Weather</h1>
                             <p class="description">A <i>Weather Prediction System</i> that provides data analytics for all your concert needs</p>
 
-                            <a class="button-cta" title="Login" href="login.html">Login</a>
+                            <a class="button-cta" title="Login" href="login">Login</a>
                             <a style="color: #CCCCCC; text-decoration: none!important;" href="home.html" title="More information"><small>More info</small></a>
                         </div>
                     </div> <!-- logo -->
@@ -135,7 +135,7 @@ Donec eros quam, sodales sit amet pellentesque eu, molestie nec magna. </pre></c
         <script src="vendor/modernizr.min.js"></script>
         <script src="vendor/jquery.min.js"></script>
         <script src="js/plugins.js"></script>
-        <script src="../public/js/main.js"></script>
+        <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <script>
