--- a/views/home.html
+++ b/views/home.html
@@ -14,13 +14,17 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
   <!-- <link rel="stylesheet" href="css/normalize.css"> -->
-  <link rel="stylesheet" href="../public/css/home.css">
+  <link rel="stylesheet" href="/css/home.css">
+
+	<!-- node and browser communication -->
+	<script type="text/javascript" src="/socket.io/socket.io.js"></script>	
+	<script type="text/javascript" src="js/dataSave.js"></script>
 
 
-  <script src="../vendor/jquery.min.js"></script>
+  <script src="vendor/jquery.min.js"></script>
 
-  <script language="javascript" type="text/javascript" src="../vendor/jquery.js"></script>
-  <script language="javascript" type="text/javascript" src="../vendor/jquery.flot.js"></script>
+  <script language="javascript" type="text/javascript" src="vendor/jquery.js"></script>
+  <script language="javascript" type="text/javascript" src="vendor/jquery.flot.js"></script>
 
 
 </head>
@@ -58,9 +62,9 @@
   <div id="Sidenav" class="sidenav">
     <div class="sidenav-content" style="text-align: center;">
       <a href="#">Profiles</a>
-      <a href="management.html" onclick="toggleNav(this)">Database</a>
+      <a href="management" onclick="toggleNav(this)">Database</a>
       <a href="#">Settings</a>
-      <a href="index.html" onclick="toggleNav(this)">Logout</a>
+      <a href="index" onclick="toggleNav(this)">Logout</a>
     </div>
   </div>
   <div id="data" class="container">
@@ -88,15 +92,13 @@
       <div class="row modal-body">
         <div class="column">
           <p><center>Temp Graph</center></p>
-
+		  
           <script>
           jQuery(document).ready(function(){
             modal1;
-            modal2;
-            modal3;
-            modal4;
-          })
+          });
           </script>
+			
           <div id="graphTemp" style="width:450px; height:300px; margin: 20px;">
           </div>
 
@@ -121,9 +123,20 @@
       <div class="row modal-body">
         <div class="column">
           <p>Solar Graph</p>
-          <div id="graphTemp" style="width:450px; height:300px; margin: 20px;"></div>
+          <div id="graphLux" style="width:450px; height:300px; margin: 20px;"></div>
           <div class="column">
             <p>Solar Exposure Sensor Feed</p>
+			
+			<script>
+			  jQuery(document).ready(function(){
+				modal2;
+			  });
+          </script>
+			
+          <div id="graphLux" style="width:450px; height:300px; margin: 20px;">
+          </div>
+		  
+		  
           </div>
         </div>
 
@@ -234,19 +247,22 @@
     </div> <!-- container -->
   </footer>
 </main>
-<script src="../vendor/modernizr.min.js"></script>
-<script src="../public/js/plugins.js"></script>
-<script src="../public/js/home.js"></script>
-<script src="../public/js/modal.js"></script>
-<script src="../vendor/jquery.simpleWeather.min.js"></script>
+	<script src="vendor/modernizr.min.js"></script>
+	<script src="js/plugins.js"></script>
+	<script src="js/home.js"></script>
+	<script src="js/modal.js"></script>
+	<script src="vendor/jquery.simpleWeather.min.js"></script>
+
+<!--
 <script>
 jQuery(document).ready(function(){
   modal1;
-  modal2;
-  modal3;
-  modal4;
+  //modal2;
+  //modal3;
+  //modal4;
 })
 </script>
+-->
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
 <script>
 window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
