--- a/views/login.html
+++ b/views/login.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="../public/css/login_style.css">
-    <script src="../public/js/login.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/login_style.css">
+    <script src="js/login.js"></script>
   </head>
 
   <body>
